RESOLVED FIXED 249652
[IFC][hanging punctuation] InlineContentBreaker should not care if hanging content is leading or trailing
https://bugs.webkit.org/show_bug.cgi?id=249652
Summary [IFC][hanging punctuation] InlineContentBreaker should not care if hanging co...
alan baradlay
Reported 2022-12-20 08:21:35 PST
ssia
Attachments
Patch (7.03 KB, patch)
2022-12-20 08:26 PST, alan baradlay
no flags
alan baradlay
Comment 1 2022-12-20 08:26:49 PST
EWS
Comment 2 2022-12-20 19:59:09 PST
Patch 464121 does not build
EWS
Comment 3 2022-12-20 22:32:28 PST
Committed 258181@main (8d41f722d967): <https://commits.webkit.org/258181@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 464121 [details].
Radar WebKit Bug Importer
Comment 4 2022-12-20 22:33:16 PST
Note You need to log in before you can comment on or make changes to this bug.