[IFC][hanging punctuation] InlineContentBreaker should not care if hanging content is leading or trailing https://bugs.webkit.org/show_bug.cgi?id=249652

Reviewed by Antti Koivisto.

Hanging content is not supposed to take up space in the line box. It simply means that InlineContentBreaker
should ignore it when checking for fit computation. From InlineContentBreaker's point of view
it does not matter whether the hanging content is at the beginning or at the end of the continuous candidate content.

* Source/WebCore/layout/formattingContexts/inline/InlineContentBreaker.cpp:
(WebCore::Layout::InlineContentBreaker::ContinuousContent::reset):
(WebCore::Layout::InlineContentBreaker::ContinuousContent::appendTrailingHangingContent): Deleted.
(WebCore::Layout::InlineContentBreaker::ContinuousContent::appendLeadingHangingContent): Deleted.
* Source/WebCore/layout/formattingContexts/inline/InlineContentBreaker.h:
(WebCore::Layout::InlineContentBreaker::ContinuousContent::hangingContentWidth const):
(WebCore::Layout::InlineContentBreaker::ContinuousContent::setHangingContentWidth):
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineCandidate::InlineContent::appendInlineItem):

Canonical link: https://commits.webkit.org/258181@main